2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/da/gnobots2.xml:
	* help/C/gnobots2.xml: Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/gnobots2-main.png: Update with the restored
	icons.

	* menu.c: Use the proper icons for teleport and random teleport.

2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gnobots2.xml: Bump the version number and redo the
	screenshots.

2005-07-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gameconfig.c (load_config): The while loop had a bad termination
	condition (bptr rather than *bptr). Fortunately there was another
	way out (and also fortunate that this is trusted data, there is
	basically no error checking in that routine). 

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnobots.c (main): Fix keyboard accelerators.
	* menu.c: Make ui_description readonly.

2005-07-08  Richard Hoelscher  <rah@rahga.com>

	* cursors.c (make_cursors): Added casts to kill signedness warnings.

2005-06-27  Richard Hoelscher  <rah@rahga.com>

	* statusbar.c: Remove statubar resize grip to match GnomeAppBar and
	the rest of gnome-games.

2005-06-06  Richard Hoelscher  <rah@rahga.com>

	* sound.[ch] (cleanup_sound): Removed.
	* properties.[ch]: Though technically outside of the properties
	dialog, support added for saving state of "Show Toolbar" menu item.
	It's handled here to keep everything gconf-related in one file.
	* menu.[ch]: Support the new GtkAction menus.
	(connect_handle_box_to_toolbar_toggle): Connect the Show Toolbar
	action to show and hide the toolbar's handle box.
	* gnobots2.schemas.in: Support the show_toolbar key.
	* gnobots.c (session_die): Removed, replaced by quit_game().
	(main): Updated to support GtkUIManager, GtkStatusBar, and toolbars
	using GtkHandleBox. 
	* game.[ch] (quit_game): Renamed cleanup_game, does gtk_main_quit().