@@ -6,6 +6,14 @@
 
 2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+	* menu.c: 
+	* gnobots.c: Remove the handlebox for consistency.
+
+	* properties.c: Remove the properties display and all the
+	associated code. It isn't necessary.
+
+2005-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>
+
 	* help/C/figures/gnobots2-main.png: Update with the restored
 	icons.
 
